--- a/templates/index.html
+++ b/templates/index.html
@@ -122,6 +122,7 @@
 
         <footer>
             <p>AWS CLF-C02 Quiz Trainer | Good luck with your certification!</p>
+            <p>Contact: rezakhani.mojgan@gmail.com</p>
         </footer>
     </div>
 </body>
